--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.13",
+    "@types/uuid": "^8.3.0",
     "babel-jest": "^26.3.0",
     "jest": "^26.4.2",
     "prettier": "^2.1.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "uuid": "^8.3.0"
+  },
+  "dependencies": {
+    "ts-option": "^2.1.0"
   }
 }
